--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
-  collection: 1.18.0
+  collection: 1.19.0
   emoji_flag_converter: 1.1.0
   file_picker: 8.1.2
   firebase_core: 3.6.0
@@ -40,6 +40,8 @@ dependencies:
   firebase_performance: 0.10.0+8
   firebase_performance_platform_interface: 0.1.4+44
   firebase_performance_web: 0.1.7+2
+  firebase_messaging: ^15.1.3
+  cloud_functions: ^5.1.3
   floating_bottom_navigation_bar: 1.5.2
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
