--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
-  collection: 1.18.0
+  collection: 1.19.0
   emoji_flag_converter: 1.1.0
   file_picker: 8.1.2
   firebase_core: 3.6.0
   firebase_core_platform_interface: 5.3.0
   firebase_core_web: 2.18.1
+  cloud_functions: ^5.1.3
+  firebase_messaging: ^15.1.3
+  firebase_storage: ^12.3.4
   firebase_performance: 0.10.0+8
   firebase_performance_platform_interface: 0.1.4+44
   firebase_performance_web: 0.1.7+2
